--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,18 +1,18 @@
-
 @import "./partials/_variables.css";
 @import "./pages/Home.css";
 @import "./pages/TaskbarLeft.css";
 @import "./pages/TaskbarRight.css";
+@import "./pages/About.css";
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 html,
 body {
   width: 100%;
   height: 100%;
-  margin: 0;
-  padding: 0;
 }
 body {
   display: flex;
